--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="../src/style.css">
+    <script src="../src/scrips.js"></script>
     <title>React App</title>
   </head>
   <body>
